[gd_scene load_steps=15 format=3 uid="uid://bc33fd1250uu3"]

[ext_resource type="Script" path="res://Scripts/Grid/GridNode.gd" id="1_2iuyb"]
[ext_resource type="Script" path="res://Scripts/Grid/ClickAction.gd" id="2_g7m4r"]
[ext_resource type="Script" path="res://Scripts/Factory/Manufacturer.gd" id="3_y2opy"]
[ext_resource type="Script" path="res://Scripts/Items/Inventory.gd" id="4_fkqrf"]
[ext_resource type="Script" path="res://Scripts/Items/Recipe/Recipe.gd" id="4_l5nda"]
[ext_resource type="Texture2D" uid="uid://dblfbupgc8lwx" path="res://Assets/Sprites/Machines/Melter.tres" id="5_0w7j1"]
[ext_resource type="Resource" uid="uid://cdfxje1swvln" path="res://Resources/Recipes/Melter/MeltCar.tres" id="5_s00or"]
[ext_resource type="Resource" uid="uid://crjmqqmem32xa" path="res://Resources/Recipes/Melter/MeltDoor.tres" id="6_47qke"]
[ext_resource type="PackedScene" uid="uid://bwo05tbedg8d7" path="res://Scenes/Objects/Factories/Components/MachineInput.tscn" id="6_u6rvv"]
[ext_resource type="Resource" uid="uid://uu48ybgh1ctp" path="res://Resources/Recipes/Melter/MeltRim.tres" id="7_4ecv3"]
[ext_resource type="PackedScene" uid="uid://bj211qmgyukaf" path="res://Scenes/Objects/Factories/Components/MachineOutput.tscn" id="7_n1dt0"]
[ext_resource type="Resource" uid="uid://chjdkyhba7yc0" path="res://Resources/Recipes/Melter/MeltRoof.tres" id="8_4j7xf"]
[ext_resource type="Resource" uid="uid://cgjcpi3s8fm73" path="res://Resources/Recipes/Melter/MeltTrunk.tres" id="9_0ptf6"]
[ext_resource type="PackedScene" uid="uid://bp4rh4pn5xxcf" path="res://Scenes/Objects/Factories/Components/Notification.tscn" id="14_0v47f"]

[node name="Melter" type="Node2D"]
script = ExtResource("1_2iuyb")
size = Vector2i(3, 3)

[node name="ClickAction" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("2_g7m4r")
target = NodePath("../Manufacturer")

[node name="Manufacturer" type="Node2D" parent="." node_paths=PackedStringArray("inputs", "outputs")]
script = ExtResource("3_y2opy")
recipes = Array[ExtResource("4_l5nda")]([ExtResource("5_s00or"), ExtResource("6_47qke"), ExtResource("7_4ecv3"), ExtResource("8_4j7xf"), ExtResource("9_0ptf6")])
inputs = [NodePath("../MachineInput")]
outputs = [NodePath("../MachineOutput")]

[node name="InputInventory" type="Node2D" parent="Manufacturer"]
script = ExtResource("4_fkqrf")

[node name="ProcessingInventory" type="Node2D" parent="Manufacturer"]
script = ExtResource("4_fkqrf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(32, 32)
rotation = -0.00234464
scale = Vector2(2, 2)
texture = ExtResource("5_0w7j1")

[node name="MachineInput" parent="." node_paths=PackedStringArray("inventory") instance=ExtResource("6_u6rvv")]
position = Vector2(-14, 32)
rotation = 1.5708
inventory = NodePath("../Manufacturer/InputInventory")

[node name="MachineOutput" parent="." instance=ExtResource("7_n1dt0")]
position = Vector2(78, 32)
rotation = 1.5708

[node name="Notification" parent="." instance=ExtResource("14_0v47f")]
position = Vector2(32, 31)

[connection signal="recipe_changed" from="Manufacturer" to="Notification" method="_on_manufacturer_recipe_changed"]
